# G6KSieve

./: CMakeLists.txt  Makefile.am  README_mpi.md  configure.ac  full_sieve.py  hkz.py  hkz_maybe.py  plain_sieve.py  setup.py  svp_challenge.py  svp_exact.py
g6k/: decl.pxd  siever.pyx  siever_params.pyx
g6k/utils/: stats.py  util.py
kernel/: G6K_MPI.hpp  Makefile.am  QEntry.hpp  bdgl_sieve.cpp  bgj1_bucketing_interface.cpp  bgj1_bucketing_interface.hpp  bgj1_bucketing_interface.inl  bgj1_sieve.cpp  bucket_pair.hpp  comm_state.hpp  communicator.cpp  communicator.hpp  communicator.inl  compat.hpp  constants.hpp  context_change.cpp  context_change.hpp  context_change.inl  control.cpp  cpuperf.cpp  db.inl  dist_sieve_runner.cpp  dist_siever.cpp  dist_siever.hpp  entry.hpp  fht_lsh.cpp  fht_lsh.h  hash_table.inl  layouts.cpp  layouts.hpp  layouts.inl  mpi_bandwidth_tracker.hpp  mpi_bandwidth_tracker.inl  mpi_cast.cpp  mpi_cast.hpp  mpi_cast.inl  mpi_obj.cpp  mpi_obj.hpp  mpi_obj.inl  mpi_request.cpp  (+24 more)
mpi_scripts/: README.md  execute_svp_challenge.sh  execute_svp_challenge_py.sh  execute_worker.sh  hosts  hosts_singular  init.sh  recompile.sh  run_init.sh  run_recompile.sh  run_svp_challenge_config
